# fraud-checker

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/app/: application.py  ioc.py  settings.py
src/app/api/: __init__.py  middleware.py
src/app/api/common/: schema.py  utils.py
src/app/api/modules/fraud/: __init__.py  gateway.py  models.py  routes.py  schema.py  service.py
src/app/api/modules/fraud/services/: __init__.py
src/app/api/modules/fraud/services/automation/: __init__.py  automation.py
src/app/api/modules/fraud/services/collectors/: __init__.py  client_checks.py  network_checks.py
src/app/api/modules/fraud/services/context/: __init__.py  behavior.py  behavior_similarity.py  device.py  geo.py  ip.py  locale.py
src/app/api/modules/fraud/services/core/: __init__.py  challenge_store.py  utils.py
src/app/api/modules/fraud/services/network/: __init__.py  captcha.py  client.py  common.py  fingerprint_velocity.py  headers.py  headers_utils.py  rate_limit.py  turnstile.py  user_agent.py
src/app/api/modules/fraud/services/platform/: __init__.py  system.py  timestamp.py
src/app/api/modules/fraud/services/public/: collector.py
src/app/clients/: __init__.py  providers.py
src/app/database/: __init__.py  base.py  uow.py
src/app/services/: logging.py
